(WIP) attempting to convert Administration to full Errai & UF

--- a/spi/src/main/resources/org/jboss/as/console/spi/AccessControlRegistry.tmpl
+++ b/spi/src/main/resources/org/jboss/as/console/spi/AccessControlRegistry.tmpl
@@ -2,7 +2,9 @@
 package org.jboss.as.console.client.plugins;
 
 import java.util.*;
+import javax.enterprise.context.ApplicationScoped;
 
+@ApplicationScoped
 public class AccessControlRegistryImpl implements AccessControlRegistry{
 
     private Set<AccessControlMetaData> accessMetaData;
